--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank=é obrigatório
-Size= deve ter no mínimo {2} e no máximo {1} cacteres
-Email= deve ser um email válido
+NotNull=é obrigatório 
+Size=deve ter no mínimo {2} e no máximo {1} cacteres
+Email=deve ser um email válido
